change name for publish to bower.io

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "retina.js",
+  "name": "mt-retina.js",
   "authors": [
     "Max Lee <liyue4158@gmail.com>",
     "Thonatos.Yang <thonatos.yang@gmail.com>"    
